linkeo rio y tai

--- a/destinos.html
+++ b/destinos.html
@@ -207,7 +207,9 @@
                 unde nulla excepturi iste soluta suscipit, laudantium mollitia
                 pariatur molestias distinctio.
               </p>
-              <button class="card-button">Ver mas</button>
+              <a href="maldivas.html"
+                ><button class="card-button">Ver mas</button></a
+              >
             </div>
           </div>
           <div class="col-md-4">
@@ -220,7 +222,9 @@
                 unde nulla excepturi iste soluta suscipit, laudantium mollitia
                 pariatur molestias distinctio.
               </p>
-              <button class="card-button">Ver mas</button>
+              <a href="rio.html"
+                ><button class="card-button">Ver mas</button></a
+              >
             </div>
           </div>
           <div class="col-md-4">
@@ -237,7 +241,9 @@
                 doloremque eveniet perspiciatis dolore modi facere quas tempora
                 impedit sed incidunt.
               </p>
-              <button class="card-button">Ver mas</button>
+              <a href="tailandia.html"
+                ><button class="card-button">Ver mas</button></a
+              >
             </div>
           </div>
         </div>
