--- a/egipto.html
+++ b/egipto.html
@@ -110,7 +110,7 @@
                   <li><a class="dropdown-item" href="machupichu.html">Machu Picchu</a></li>
                   <li><a class="dropdown-item" href="maldivas.html">Maldivas</a></li>
                   <li><a class="dropdown-item" href="rio.html">Rio de Janeiro</a></li>
-                  <li><a class="dropdown-item" href="#">Tailandia</a></li>
+                  <li><a class="dropdown-item" href="tailandia.html">Tailandia</a></li>
                 </ul>
               </li>
               <li class="nav-item">
