--- a/destinos.html
+++ b/destinos.html
@@ -118,7 +118,9 @@
                 <li>
                   <a class="dropdown-item" href="rio.html">Rio de Janeiro</a>
                 </li>
-                <li><a class="dropdown-item" href="#">Tailandia</a></li>
+                <li>
+                  <a class="dropdown-item" href="tailandia.html">Tailandia</a>
+                </li>
               </ul>
             </li>
             <li class="nav-item">
