--- a/maldivas.html
+++ b/maldivas.html
@@ -115,7 +115,7 @@
                   <a class="dropdown-item" href="maldivas.html">Maldivas</a>
                 </li>
                 <li><a class="dropdown-item" href="rio.html">Rio de Janeiro</a></li>
-                <li><a class="dropdown-item" href="#">Tailandia</a></li>
+                <li><a class="dropdown-item" href="tailandia.html">Tailandia</a></li>
               </ul>
             </li>
             <li class="nav-item">
