--- a/destinos.html
+++ b/destinos.html
@@ -5,6 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DESTINOS</title>
+    <meta
+      name="description"
+      content="¿Por qué viajar con Bravo? · Descubre una nueva forma de viajar. Vive tu viaje de aventura como una experiencia llena de emociones que recordarás el resto de tu vida."
+    />
+    <meta
+      name="keywords"
+      content="viaje, aventura, paises, paquetes, mundo, vuelos, hoteles, playas, experiencias"
+    />
 
     <!--CSS BOOTSTRAP-->
     <link
@@ -24,7 +32,7 @@
     <link rel="icon" href="imagenes/favicon.png" />
 
     <!--CSS-->
-    <link rel="stylesheet" href="style/style.css" />
+    <link rel="stylesheet" href="css/style.css" />
 
     <!--FONTAWSOME-->
     <link
@@ -124,7 +132,7 @@
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link">Contactanos</a>
+              <a class="nav-link" href="contactanos.html">Contactanos</a>
             </li>
           </ul>
         </div>
