--- a/maldivas.html
+++ b/maldivas.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ISLAS MALDIVAS</title>
+    <meta name="description" content="¿Por qué viajar con Bravo? · Descubre una nueva forma de viajar. Vive tu viaje de aventura como una experiencia llena de emociones que recordarás el resto de tu vida.">
+    <meta name="keywords" content="viaje, aventura, paises, paquetes, mundo, vuelos, hoteles, playas, experiencias"
+    >
     <!--CSS BOOTSTRAP-->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
@@ -23,7 +26,7 @@
     <link rel="icon" href="imagenes/favicon.png" />
 
     <!--CSS-->
-    <link rel="stylesheet" href="style/style.css" />
+    <link rel="stylesheet" href="css/style.css" />
 
     <!--FONTAWSOME-->
     <link
