--- a/antes-de-viajar.html
+++ b/antes-de-viajar.html
@@ -5,8 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ANTES DE VIAJAR</title>
-    <meta name="description" content="¿Por qué viajar con Bravo? · Descubre una nueva forma de viajar. Vive tu viaje de aventura como una experiencia llena de emociones que recordarás el resto de tu vida.">
-    <meta name="keywords" content="viaje, aventura, paises, paquetes, mundo, vuelos, hoteles, playas, experiencias"
+    <meta name="description" content="Sabemos lo importante que es para ti sumergirte en la aventura
+    de viajar, por eso queremos brindarte este espacio para que
+    conozcas cómo funcionan nuestros viajes y que puedas descubrir
+    si esta modalidad de viaje es para ti.">
+    <meta name="keywords" content="viaje, aventura, paises, paquetes, mundo, vuelos, hoteles, playas, experiencias, antes, funcionamiento"
     >
 
     <!--CSS BOOTSTRAP-->
@@ -62,9 +65,8 @@
           width="150px"
           class="img-logo animate__animated animate__pulse"
       /></a>
-    </header>
 
-    <!--NAVBAR-->
+      <!--NAVBAR-->
     <nav class="navbar navbar-expand-lg navbar-dark bg dark">
       <div class="container-fluid">
         <a class="navbar-brand" href="#"></a>
@@ -123,6 +125,7 @@
         </div>
       </div>
     </nav>
+    </header>
 
     <!--IMG-->
     <main>
@@ -132,21 +135,21 @@
             <img
               src="imagenes/turista1(1).jpg"
               class="img-fluid rounded-start"
-              alt="antes-de-viajar"
+              alt="antes de viajar tailandia"
             />
           </div>
           <div class="col-md-4 p-2">
             <img
               src="imagenes/turista2(1).jpg"
               class="img-fluid rounded-start"
-              alt="antes-de-viajar"
+              alt="antes de viajar egipto"
             />
           </div>
           <div class="col-md-4 p-2">
             <img
               src="imagenes/turista3(1).jpg"
               class="img-fluid rounded-start"
-              alt="antes-de-viajar"
+              alt="antes de viajar maldivas"
             />
           </div>
           <div class="card-body">
