--- a/contactanos.html
+++ b/contactanos.html
@@ -7,12 +7,9 @@
     <title>CONTACTANOS</title>
     <meta
       name="description"
-      content="¿Por qué viajar con Bravo? · Descubre una nueva forma de viajar. Vive tu viaje de aventura como una experiencia llena de emociones que recordarás el resto de tu vida."
+      content="Contactate con nosotros y responderemos en breve con toda la informacion necesaria"
     />
-    <meta
-      name="keywords"
-      content="viaje, aventura, paises, paquetes, mundo, vuelos, hoteles, playas, experiencias"
-    />
+    <meta name="keywords" content="viaje, informacion, contacto, formulario" />
 
     <!--CSS BOOTSTRAP-->
     <link
@@ -67,145 +64,107 @@
           width="150px"
           class="img-logo animate__animated animate__pulse"
       /></a>
-    </header>
 
-    <!--NAVBAR-->
-    <nav class="navbar navbar-expand-lg navbar-dark bg dark">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#"></a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html"
-                >Somos Travel Bravo</a
-              >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="antes-de-viajar.html"
-                >Antes de Viajar</a
-              >
-            </li>
-            <li class="nav-item dropdown">
-              <a
-                class="nav-link dropdown-toggle"
-                href="destinos.html"
-                id="navbarDropdown"
-                role="button"
-                data-bs-toggle="dropdown"
-                aria-expanded="false"
-              >
-                Destinos
-              </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li>
-                  <a class="dropdown-item" href="destinos.html"
-                    >Nuestros destinos</a
-                  >
-                </li>
-                <li><a class="dropdown-item" href="egipto.html">Egipto</a></li>
-                <li><a class="dropdown-item" href="kenia.html">Kenia</a></li>
-                <li>
-                  <a class="dropdown-item" href="machupichu.html"
-                    >Machu Picchu</a
-                  >
-                </li>
-                <li>
-                  <a class="dropdown-item" href="maldivas.html">Maldivas</a>
-                </li>
-                <li>
-                  <a class="dropdown-item" href="rio.html">Rio de Janeiro</a>
-                </li>
-                <li>
-                  <a class="dropdown-item" href="tailandia.html">Tailandia</a>
-                </li>
-              </ul>
-            </li>
-            <li class="nav-item active">
-              <a class="nav-link" href="contactanos.html">Contactanos</a>
-            </li>
-          </ul>
+      <!--NAVBAR-->
+      <nav class="navbar navbar-expand-lg navbar-dark bg dark">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#"></a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="index.html"
+                  >Somos Travel Bravo</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="antes-de-viajar.html"
+                  >Antes de Viajar</a
+                >
+              </li>
+              <li class="nav-item dropdown">
+                <a
+                  class="nav-link dropdown-toggle"
+                  href="destinos.html"
+                  id="navbarDropdown"
+                  role="button"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                >
+                  Destinos
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <li>
+                    <a class="dropdown-item" href="destinos.html"
+                      >Nuestros destinos</a
+                    >
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="egipto.html">Egipto</a>
+                  </li>
+                  <li><a class="dropdown-item" href="kenia.html">Kenia</a></li>
+                  <li>
+                    <a class="dropdown-item" href="machupichu.html"
+                      >Machu Picchu</a
+                    >
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="maldivas.html">Maldivas</a>
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="rio.html">Rio de Janeiro</a>
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="tailandia.html">Tailandia</a>
+                  </li>
+                </ul>
+              </li>
+              <li class="nav-item active">
+                <a class="nav-link" href="contactanos.html">Contactanos</a>
+              </li>
+            </ul>
+          </div>
         </div>
-      </div>
-    </nav>
+      </nav>
+    </header>
 
     <!--FORMULARIO-->
 
-    <div class="contact_form">
-      <div class="formulario">
-        <h1 class="contactanos">Contactanos</h1>
-        <h3 class="breve">Te respondemos en breve!</h3>
-
-        <form action="submeter-formulario.php" method="post">
-          <p class="form-p">
-            <label for="nome" class="colocar_nome"
-              >Nombre
-              <span class="obrigatorio">*</span>
-            </label>
+    <div class="container d-flex justify-content-center align-items-center">
+      <div class="row">
+        <div class="col-md-12">
+          <form>
+            <h3 class="contactanos">CONTACTANOS</h3>
             <input
+              name="name"
               type="text"
-              name="introduzir_nome"
-              id="nome"
-              required="obrigatorio"
-              placeholder="Tu nombre"
+              class="feedback-input"
+              placeholder="Name"
             />
-          </p>
-
-          <p>
-            <label for="email" class="colocar_email"
-              >Email
-              <span class="obrigatorio">*</span>
-            </label>
             <input
-              type="email"
-              name="introduzir_email"
-              id="email"
-              required="obrigatorio"
-              placeholder="Tu Email"
+              name="email"
+              type="text"
+              class="feedback-input"
+              placeholder="Email"
             />
-          </p>
-
-          <p>
-            <label for="telefone" class="colocar_telefone">Celular </label>
-            <input
-              type="tel"
-              name="introduzir_telefone"
-              id="telefone"
-              placeholder="Tu celular"
-            />
-          </p>
-          <p>
-            <label for="mensagem" class="colocar_mensagem"
-              >Mensaje
-              <span class="obrigatorio">*</span>
-            </label>
             <textarea
-              name="introduzir_mensagem"
-              class="texto_mensagem"
-              id="mensagem"
-              required="obrigatorio"
-              placeholder="Escribe tu mensaje aqui..."
+              name="text"
+              class="feedback-input"
+              placeholder="Comment"
             ></textarea>
-          </p>
-
-          <button type="submit" name="enviar_formulario" id="enviar">
-            <p>Enviar</p>
-          </button>
-
-          <p class="aviso">
-            <span class="obrigatorio"> * </span>Campos obligatorios
-          </p>
-        </form>
+            <input type="submit" value="SUBMIT" />
+          </form>
+        </div>
       </div>
     </div>
 
