--- a/destinos.html
+++ b/destinos.html
@@ -7,11 +7,11 @@
     <title>DESTINOS</title>
     <meta
       name="description"
-      content="¿Por qué viajar con Bravo? · Descubre una nueva forma de viajar. Vive tu viaje de aventura como una experiencia llena de emociones que recordarás el resto de tu vida."
+      content="Todos nuestros destinos en un solo lugar, con toda la info que necesitas saber"
     />
     <meta
       name="keywords"
-      content="viaje, aventura, paises, paquetes, mundo, vuelos, hoteles, playas, experiencias"
+      content="destinos, viaje, aventura, paises, paquetes, mundo, vuelos, hoteles, playas, experiencias"
     />
 
     <!--CSS BOOTSTRAP-->
@@ -67,77 +67,79 @@
           width="150px"
           class="img-logo animate__animated animate__pulse"
       /></a>
-    </header>
 
-    <!--NAVBAR-->
-    <nav class="navbar navbar-expand-lg navbar-dark bg dark">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#"></a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html"
-                >Somos Travel Bravo</a
-              >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="antes-de-viajar.html"
-                >Antes de Viajar</a
-              >
-            </li>
-            <li class="nav-item dropdown">
-              <a
-                class="nav-link dropdown-toggle"
-                href="destinos.html"
-                id="navbarDropdown"
-                role="button"
-                data-bs-toggle="dropdown"
-                aria-expanded="false"
-              >
-                Destinos
-              </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li>
-                  <a class="dropdown-item active" href="destinos.html"
-                    >Nuestros destinos</a
-                  >
-                </li>
-                <li><a class="dropdown-item" href="egipto.html">Egipto</a></li>
-                <li><a class="dropdown-item" href="kenia.html">Kenia</a></li>
-                <li>
-                  <a class="dropdown-item" href="machupichu.html"
-                    >Machu Picchu</a
-                  >
-                </li>
-                <li>
-                  <a class="dropdown-item" href="maldivas.html">Maldivas</a>
-                </li>
-                <li>
-                  <a class="dropdown-item" href="rio.html">Rio de Janeiro</a>
-                </li>
-                <li>
-                  <a class="dropdown-item" href="tailandia.html">Tailandia</a>
-                </li>
-              </ul>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="contactanos.html">Contactanos</a>
-            </li>
-          </ul>
+      <!--NAVBAR-->
+      <nav class="navbar navbar-expand-lg navbar-dark bg dark">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#"></a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="index.html"
+                  >Somos Travel Bravo</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="antes-de-viajar.html"
+                  >Antes de Viajar</a
+                >
+              </li>
+              <li class="nav-item dropdown">
+                <a
+                  class="nav-link dropdown-toggle"
+                  href="destinos.html"
+                  id="navbarDropdown"
+                  role="button"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                >
+                  Destinos
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <li>
+                    <a class="dropdown-item active" href="destinos.html"
+                      >Nuestros destinos</a
+                    >
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="egipto.html">Egipto</a>
+                  </li>
+                  <li><a class="dropdown-item" href="kenia.html">Kenia</a></li>
+                  <li>
+                    <a class="dropdown-item" href="machupichu.html"
+                      >Machu Picchu</a
+                    >
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="maldivas.html">Maldivas</a>
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="rio.html">Rio de Janeiro</a>
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="tailandia.html">Tailandia</a>
+                  </li>
+                </ul>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="contactanos.html">Contactanos</a>
+              </li>
+            </ul>
+          </div>
         </div>
-      </div>
-    </nav>
+      </nav>
+    </header>
     <!--MAIN-->
     <main>
       <div class="container">
