--- a/machupichu.html
+++ b/machupichu.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MACHU PICCHU</title>
-    <meta name="description" content="¿Por qué viajar con Bravo? · Descubre una nueva forma de viajar. Vive tu viaje de aventura como una experiencia llena de emociones que recordarás el resto de tu vida.">
-    <meta name="keywords" content="viaje, aventura, paises, paquetes, mundo, vuelos, hoteles, playas, experiencias"
+    <meta name="description" content=" Si de aventura van tus viajes y te motiva conocer lo más profundo de una cultura, Machu Picchu te espera.">
+    <meta name="keywords" content="machu picchu, maravilla, valle sagrado, viaje, aventura, paises, paquetes, mundo, vuelos, hoteles, playas, experiencias"
     >
 
     <!--CSS BOOTSTRAP-->
@@ -62,9 +62,8 @@
           width="150px"
           class="img-logo animate__animated animate__pulse"
       /></a>
-    </header>
 
-    <!--NAVBAR-->
+      <!--NAVBAR-->
     <nav class="navbar navbar-expand-lg navbar-dark bg dark">
       <div class="container-fluid">
         <a class="navbar-brand" href="#"></a>
@@ -127,6 +126,7 @@
         </div>
       </div>
     </nav>
+    </header>
 
     <!--MAIN-->
     <main>
@@ -165,21 +165,21 @@
         <img
           src="imagenes/macu-carousel1(1).jpg"
           class="d-block w-100"
-          alt="1"
+          alt="carousel machu picchu 1"
         />
       </div>
       <div class="carousel-item">
         <img
           src="imagenes/machu-carousel2.jpg"
           class="d-block w-100"
-          alt="2"
+          alt="carousel machu picchu 2"
         />
       </div>
       <div class="carousel-item">
         <img
           src="imagenes/machu-carousel3(1).jpg"
           class="d-block w-100"
-          alt="3"
+          alt="carousel machu picchu 3"
         />
       </div>
     </div>
