--- a/egipto.html
+++ b/egipto.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EGIPTO</title>
-    <meta name="description" content="¿Por qué viajar con Bravo? · Descubre una nueva forma de viajar. Vive tu viaje de aventura como una experiencia llena de emociones que recordarás el resto de tu vida.">
-    <meta name="keywords" content="viaje, aventura, paises, paquetes, mundo, vuelos, hoteles, playas, experiencias"
+    <meta name="description" content="Guía de Egipto con toda la información necesaria para viajar a Egipto, aprende todo lo necesario para visitar y disfrutar de un país único como Egipto.">
+    <meta name="keywords" content="egipto, desierto, nilo, viaje, aventura, paises, paquetes, mundo, vuelos, hoteles, playas, experiencias"
     >
 
     <!--CSS BOOTSTRAP-->
@@ -62,9 +62,8 @@
             width="150px"
             class="img-logo animate__animated animate__pulse"
         /></a>
-      </header>
-  
-      <!--NAVBAR-->
+
+        <!--NAVBAR-->
       <nav class="navbar navbar-expand-lg navbar-dark bg dark">
         <div class="container-fluid">
           <a class="navbar-brand" href="#"></a>
@@ -123,6 +122,7 @@
           </div>
         </div>
       </nav>
+      </header>
 
       <!--MAIN-->
       <main>
@@ -137,13 +137,13 @@
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="imagenes/egipto-carousel1.jpg" class="d-block w-100" alt="1">
+                <img src="imagenes/egipto-carousel1.jpg" class="d-block w-100" alt="carousel egipto 1">
               </div>
               <div class="carousel-item">
-                <img src="imagenes/egipto-carousel2.jpg" class="d-block w-100" alt="2">
+                <img src="imagenes/egipto-carousel2.jpg" class="d-block w-100" alt="carousel egipto 2">
               </div>
               <div class="carousel-item">
-                <img src="imagenes/egipto-carousel3.jpg" class="d-block w-100" alt="3">
+                <img src="imagenes/egipto-carousel3.jpg" class="d-block w-100" alt="carousel egipto 3">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
