--- a/kenia.html
+++ b/kenia.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>KENIA</title>
-    <meta name="description" content="¿Por qué viajar con Bravo? · Descubre una nueva forma de viajar. Vive tu viaje de aventura como una experiencia llena de emociones que recordarás el resto de tu vida.">
-    <meta name="keywords" content="viaje, aventura, paises, paquetes, mundo, vuelos, hoteles, playas, experiencias"
+    <meta name="description" content="Detallada guía de Turismo de Kenia - el país del Safari. Información práctica, destinos recomendados, mapa, safaris y excursiones">
+    <meta name="keywords" content="kenia, safari, sabana, viaje, aventura, paises, paquetes, mundo, vuelos, hoteles, playas, experiencias"
     >
     
     <!--CSS BOOTSTRAP-->
@@ -62,9 +62,8 @@
           width="150px"
           class="img-logo animate__animated animate__pulse"
       /></a>
-    </header>
 
-    <!--NAVBAR-->
+      <!--NAVBAR-->
     <nav class="navbar navbar-expand-lg navbar-dark bg dark">
       <div class="container-fluid">
         <a class="navbar-brand" href="#"></a>
@@ -123,6 +122,7 @@
         </div>
       </div>
     </nav>
+    </header>
 
     <!--MAIN-->
     <main>
@@ -161,21 +161,21 @@
             <img
               src="imagenes/keni-carousel1(1).jpg"
               class="d-block w-100"
-              alt="1"
+              alt="carousel kenia 1"
             />
           </div>
           <div class="carousel-item">
             <img
               src="imagenes/kenia-carousel2(1).jpg"
               class="d-block w-100"
-              alt="2"
+              alt="carousel kenia 2"
             />
           </div>
           <div class="carousel-item">
             <img
               src="imagenes/kenia-carousel3(1).jpg"
               class="d-block w-100"
-              alt="3"
+              alt="carousel kenia 3"
             />
           </div>
         </div>
