--- a/maldivas.html
+++ b/maldivas.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ISLAS MALDIVAS</title>
-    <meta name="description" content="¿Por qué viajar con Bravo? · Descubre una nueva forma de viajar. Vive tu viaje de aventura como una experiencia llena de emociones que recordarás el resto de tu vida.">
-    <meta name="keywords" content="viaje, aventura, paises, paquetes, mundo, vuelos, hoteles, playas, experiencias"
+    <meta name="description" content="Exóticas y seductoras, las islas Maldivas son el destino soñado de muchos viajeros deseosos de descansar en sus exclusivos resorts, bañarse en sus cristalinas aguas">
+    <meta name="keywords" content="maldivas, arena, resorts, viaje, aventura, paises, paquetes, mundo, vuelos, hoteles, playas, experiencias"
     >
     <!--CSS BOOTSTRAP-->
     <link
@@ -61,9 +61,8 @@
           width="150px"
           class="img-logo animate__animated animate__pulse"
       /></a>
-    </header>
 
-    <!--NAVBAR-->
+      <!--NAVBAR-->
     <nav class="navbar navbar-expand-lg navbar-dark bg dark">
       <div class="container-fluid">
         <a class="navbar-brand" href="#"></a>
@@ -128,6 +127,7 @@
         </div>
       </div>
     </nav>
+    </header>
 
      <!--MAIN-->
      <main>
@@ -166,21 +166,21 @@
         <img
           src="imagenes/maldivas-carousel1(1).jpg"
           class="d-block w-100"
-          alt="1"
+          alt="carousel maldivas 1"
         />
       </div>
       <div class="carousel-item">
         <img
           src="imagenes/maldivas-carousel2(1)(1).jpg"
           class="d-block w-100"
-          alt="2"
+          alt="carousel maldivas 2"
         />
       </div>
       <div class="carousel-item">
         <img
           src="imagenes/maldivasa-carousel3(1).jpg"
           class="d-block w-100"
-          alt="3"
+          alt="carousel maldivas 3"
         />
       </div>
     </div>
