--- a/rio.html
+++ b/rio.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>RIO DE JANEIRO</title>
-    <meta name="description" content="¿Por qué viajar con Bravo? · Descubre una nueva forma de viajar. Vive tu viaje de aventura como una experiencia llena de emociones que recordarás el resto de tu vida.">
-    <meta name="keywords" content="viaje, aventura, paises, paquetes, mundo, vuelos, hoteles, playas, experiencias"
+    <meta name="description" content="Rio de Janeiro, disfruta de una ciudad increíblemente impresionante llena de contrastes y de mil maravillas que harán de tu viaje toda una experiencia">
+    <meta name="keywords" content="rio, cristo, viaje, aventura, paises, paquetes, mundo, vuelos, hoteles, playas, experiencias"
     >
     <!--CSS BOOTSTRAP-->
     <link
@@ -61,9 +61,8 @@
           width="150px"
           class="img-logo animate__animated animate__pulse"
       /></a>
-    </header>
 
-    <!--NAVBAR-->
+      <!--NAVBAR-->
     <nav class="navbar navbar-expand-lg navbar-dark bg dark">
       <div class="container-fluid">
         <a class="navbar-brand" href="#"></a>
@@ -130,6 +129,7 @@
         </div>
       </div>
     </nav>
+    </header>
 
     <!--MAIN-->
     <main>
@@ -168,21 +168,21 @@
         <img
           src="imagenes/rio-carousel1(1).jpg"
           class="d-block w-100"
-          alt="1"
+          alt="carousel rio 1"
         />
       </div>
       <div class="carousel-item">
         <img
           src="imagenes/rio-carousel2(1).jpg"
           class="d-block w-100"
-          alt="2"
+          alt="carousel rio 2"
         />
       </div>
       <div class="carousel-item">
         <img
           src="imagenes/rio-carousel3(1).jpg"
           class="d-block w-100"
-          alt="3"
+          alt="carousel rio 3"
         />
       </div>
     </div>
