--- a/tailandia.html
+++ b/tailandia.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TAILANDIA</title>
-    <meta name="description" content="¿Por qué viajar con Bravo? · Descubre una nueva forma de viajar. Vive tu viaje de aventura como una experiencia llena de emociones que recordarás el resto de tu vida.">
-    <meta name="keywords" content="viaje, aventura, paises, paquetes, mundo, vuelos, hoteles, playas, experiencias"
+    <meta name="description" content="Ríos de tinta se han utilizado para describir a este colorido, hospitalario y alegre país como lo es Tailandia">
+    <meta name="keywords" content="tailandia, peninsula, viaje, aventura, paises, paquetes, mundo, vuelos, hoteles, playas, experiencias"
     >
     <!--CSS BOOTSTRAP-->
     <link
@@ -61,9 +61,8 @@
           width="150px"
           class="img-logo animate__animated animate__pulse"
       /></a>
-    </header>
 
-    <!--NAVBAR-->
+      <!--NAVBAR-->
     <nav class="navbar navbar-expand-lg navbar-dark bg dark">
       <div class="container-fluid">
         <a class="navbar-brand" href="#"></a>
@@ -132,6 +131,7 @@
         </div>
       </div>
     </nav>
+    </header>
 
     <!--MAIN-->
     <main>
@@ -170,21 +170,21 @@
         <img
           src="imagenes/tailandia-carousel1(1).jpg"
           class="d-block w-100"
-          alt="1"
+          alt="carousel tailandia 1"
         />
       </div>
       <div class="carousel-item">
         <img
           src="imagenes/tailandia-carousel2(1).jpg"
           class="d-block w-100"
-          alt="2"
+          alt="carousel tailandia 2"
         />
       </div>
       <div class="carousel-item">
         <img
           src="imagenes/tailandia-carousel3(1).jpg"
           class="d-block w-100"
-          alt="3"
+          alt="carousel tailandia 3"
         />
       </div>
     </div>
