--- a/antes-de-viajar.html
+++ b/antes-de-viajar.html
@@ -5,12 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ANTES DE VIAJAR</title>
-    <meta name="description" content="Sabemos lo importante que es para ti sumergirte en la aventura
+    <meta
+      name="description"
+      content="Sabemos lo importante que es para ti sumergirte en la aventura
     de viajar, por eso queremos brindarte este espacio para que
     conozcas cómo funcionan nuestros viajes y que puedas descubrir
-    si esta modalidad de viaje es para ti.">
-    <meta name="keywords" content="viaje, aventura, paises, paquetes, mundo, vuelos, hoteles, playas, experiencias, antes, funcionamiento"
-    >
+    si esta modalidad de viaje es para ti."
+    />
+    <meta
+      name="keywords"
+      content="viaje, aventura, paises, paquetes, mundo, vuelos, hoteles, playas, experiencias, antes, funcionamiento"
+    />
 
     <!--CSS BOOTSTRAP-->
     <link
@@ -67,64 +72,76 @@
       /></a>
 
       <!--NAVBAR-->
-    <nav class="navbar navbar-expand-lg navbar-dark bg dark">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#"></a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html"
-                >Somos Travel Bravo</a
-              >
-            </li>
-            <li class="nav-item active">
-              <a class="nav-link" href="antes-de-viajar.html"
-                >Antes de Viajar</a
-              >
-            </li>
-            <li class="nav-item dropdown">
-              <a
-                class="nav-link dropdown-toggle"
-                href="destinos.html"
-                id="navbarDropdown"
-                role="button"
-                data-bs-toggle="dropdown"
-                aria-expanded="false"
-              >
-                Destinos
-              </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li>
-                  <a class="dropdown-item" href="destinos.html"
-                    >Nuestros destinos</a
-                  >
-                </li>
-                <li><a class="dropdown-item" href="egipto.html">Egipto</a></li>
-                <li><a class="dropdown-item" href="kenia.html">Kenia</a></li>
-                <li><a class="dropdown-item" href="machupichu.html">Machu Picchu</a></li>
-                <li><a class="dropdown-item" href="maldivas.html">Maldivas</a></li>
-                <li><a class="dropdown-item" href="rio.html">Rio de Janeiro</a></li>
-                <li><a class="dropdown-item" href="tailandia.html">Tailandia</a></li>
-              </ul>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="contactanos.html">Contactanos</a>
-            </li>
-          </ul>
+      <nav class="navbar navbar-expand-lg navbar-dark bg dark">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#"></a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="index.html"
+                  >Somos Travel Bravo</a
+                >
+              </li>
+              <li class="nav-item active">
+                <a class="nav-link" href="antes-de-viajar.html"
+                  >Antes de Viajar</a
+                >
+              </li>
+              <li class="nav-item dropdown">
+                <a
+                  class="nav-link dropdown-toggle"
+                  href="destinos.html"
+                  id="navbarDropdown"
+                  role="button"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                >
+                  Destinos
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <li>
+                    <a class="dropdown-item" href="destinos.html"
+                      >Nuestros destinos</a
+                    >
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="egipto.html">Egipto</a>
+                  </li>
+                  <li><a class="dropdown-item" href="kenia.html">Kenia</a></li>
+                  <li>
+                    <a class="dropdown-item" href="machupichu.html"
+                      >Machu Picchu</a
+                    >
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="maldivas.html">Maldivas</a>
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="rio.html">Rio de Janeiro</a>
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="tailandia.html">Tailandia</a>
+                  </li>
+                </ul>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="contactanos.html">Contactanos</a>
+              </li>
+            </ul>
+          </div>
         </div>
-      </div>
-    </nav>
+      </nav>
     </header>
 
     <!--IMG-->
@@ -155,27 +172,27 @@
           <div class="card-body">
             <h5 class="card-title">Antes de viajar</h5>
             <p class="card-text">
-              Sabemos lo importante que es para ti sumergirte en la aventura
-              de viajar, por eso queremos brindarte este espacio para que
-              conozcas cómo funcionan nuestros viajes y que puedas descubrir
-              si esta modalidad de viaje es para ti. En un viaje de aventura
-              es importante tener una filosofía de viaje en la cual la
+              Sabemos lo importante que es para ti sumergirte en la aventura de
+              viajar, por eso queremos brindarte este espacio para que conozcas
+              cómo funcionan nuestros viajes y que puedas descubrir si esta
+              modalidad de viaje es para ti. En un viaje de aventura es
+              importante tener una filosofía de viaje en la cual la
               adaptabilidad, el pensamiento positivo y constructivo sean los
-              pilares. Sabemos que pueden surgir situaciones desfavorables;
-              como reservar un alojamiento que no nos guste, o tener que
-              suspender una actividad por tormentas o lluvias torrenciales. En
-              el fondo tenemos que tener claro que esos pequeños imprevistos
-              son parte de este tipo de experiencias. En cualquiera de
-              nuestras experiencias vivirás emociones, e intercambios con
-              diversas personas, por eso es importante que durante todo el
-              viaje se mantenga una actitud positiva, paciente y que todos
-              podamos mostrar un espíritu de ayuda mutua. Creemos firmemente
-              en una forma de viajar respetuosa con el medio ambiente y con
-              las culturas que visitamos, solidaria y que contribuya con el
-              desarrollo de las economías locales.
+              pilares. Sabemos que pueden surgir situaciones desfavorables; como
+              reservar un alojamiento que no nos guste, o tener que suspender
+              una actividad por tormentas o lluvias torrenciales. En el fondo
+              tenemos que tener claro que esos pequeños imprevistos son parte de
+              este tipo de experiencias. En cualquiera de nuestras experiencias
+              vivirás emociones, e intercambios con diversas personas, por eso
+              es importante que durante todo el viaje se mantenga una actitud
+              positiva, paciente y que todos podamos mostrar un espíritu de
+              ayuda mutua. Creemos firmemente en una forma de viajar respetuosa
+              con el medio ambiente y con las culturas que visitamos, solidaria
+              y que contribuya con el desarrollo de las economías locales.
             </p>
           </div>
-
+        </div>
+      </div>
     </main>
     <!--FOOTER-->
     <footer>
