--- a/index.html
+++ b/index.html
@@ -198,9 +198,9 @@
       </div>
 
       <!--VENTAJAS-->
-      <div class="ventajas">
+      <div class="ventajas pt-5">
         <h2>Ventajas de viajar con nosotros</h2>
-        <h1>¿Por qué viajar con TravelBravo?</h1>
+        <h1 class="pb-5">¿Por qué viajar con TravelBravo?</h1>
       </div>
 
      <div class="container">
